dark mode fixed

--- a/src/App.css
+++ b/src/App.css
@@ -182,6 +182,7 @@
   /* min-width: 100%; */
   height: 40px;
   border-radius: 6px;
+  border: none;
 }
 
 .react-datepicker-wrapper {
